--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -234,7 +234,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.android.tv.dvr.ui.browse.DvrDetailsActivity"
+            android:name="com.android.tv.ui.DetailsActivity"
             android:configChanges="keyboard|keyboardHidden"
             android:theme="@style/Theme.TV.Dvr.Browse.Details" />
         <activity
